# live-wspsr-tui

./: .gitignore  README.md  pyproject.toml
src/wspsr/: main.py  monitor.py  pretty.css  tui.py
src/wspsr/screens/: encryption.py  selection.py
