[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wspsr"
version = "0.0.1"
authors = [
    { name="Jan Inge Sande", email="j@ninge.no" },
]
description = "Terminal user interface for Whisper live distribution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.32",
    "libarchive-c>=3.0",
    "watchdog>2",
    "aiostream>=0.2.6",
    "aioshutil",
    "python-magic",
    "pymediainfo"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
]

[project.scripts]
wspsr-tui = "wspsr.tui:main"

[project.urls]
"Homepage" = "https://github.com/janinge/live-wspsr-tui"
"Bug Tracker" = "https://github.com/janinge/live-wspsr-tui/issues"
